--- a/package.json
+++ b/package.json
@@ -26,6 +26,16 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
+  "dependencies": {
+    "framer-motion": "^12.23.16",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
+    "lucide-react": "^0.544.0",
+    "next": "^15.5.3",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "@nextui-org/react": "^2.0.0"
+  },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.13",
     "@types/node": "^24.5.2",
